[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/wpn/wpn.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/luger.png-b03e873cc79062110623358a27093727.stex"

[node name="wpn" type="Sprite"]
scale = Vector2( 0.75, 0.75 )
texture = SubResource( 1 )
script = ExtResource( 2 )
reloadTime = 3.0

[node name="shootPos" type="Position2D" parent="."]
position = Vector2( 5, -1 )

[node name="reloadTimer" type="Timer" parent="."]
one_shot = true

[node name="rangedTimer" type="Timer" parent="."]
one_shot = true

[node name="meleeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="reloadTimer" to="." method="_on_reloadTimer_timeout"]
[connection signal="timeout" from="rangedTimer" to="." method="_on_rangedTimer_timeout"]
[connection signal="timeout" from="meleeTimer" to="." method="_on_meleeTimer_timeout"]
